# surge-single-effect-lv2

./: .gitmodules  CMakeLists.txt  README.md
cmake/: ApplyJuceUnitsPatch.cmake
docs/: chorus-extraction-plan.md  juce-lv2-units-feature-request.md  modgui-skin-howto.md
modgui-template/: README.md  icon.html  modgui.ttl  stylesheet.css
modgui-template/flanger-example/: icon.html  modgui.ttl  stylesheet.css
modgui/surge-xt-chorus/: modgui.ttl  patch-dsp.py
modgui/surge-xt-chorus/modgui/: icon.html  stylesheet.css
modgui/surge-xt-delay/: modgui.ttl  patch-dsp.py
modgui/surge-xt-delay/modgui/: icon.html
modgui/surge-xt-flanger/: modgui.ttl  patch-dsp.py
modgui/surge-xt-flanger/modgui/: icon.html
modgui/surge-xt-phaser/: modgui.ttl  patch-dsp.py
modgui/surge-xt-phaser/modgui/: icon.html  stylesheet.css
modgui/surge-xt-reverb1/: modgui.ttl  patch-dsp.py
modgui/surge-xt-reverb1/modgui/: icon.html  stylesheet.css
modgui/surge-xt-rotary/: modgui.ttl  patch-dsp.py
modgui/surge-xt-rotary/modgui/: icon.html
patches/: juce-lv2-units.patch
src/: CMakeLists.txt  SingleEffectProcessor.cpp  SingleEffectProcessor.h
tools/: patch-lv2-units.cpp
